Bug 151509 - Sidebar content disappearing with gtk3 backend
Summary: Sidebar content disappearing with gtk3 backend
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords:
: 151804 (view as bug list)
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2022-10-13 14:39 UTC by Samuel Mehrbrodt
Modified: 2022-12-19 12:20 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel Mehrbrodt 2022-10-13 14:39:51 UTC
1. Install WollMux.oxt from https://github.com/WollMux/WollMux/releases/tag/RELEASE_18.2.10 
2. Install WollMux Config to ~/.wollmux from https://github.com/WollMux/wollmux-config/releases/tag/v18.1.0
3. Open Writer
4. In the Sidebar, select Vorlagen->Formulare->Kurzmitteilung from the "WollMux" Deck -> A new document is opened which has the "Formular" Sidebar Deck open
5. Click on the tab "Unser Zeichen" or "Mit der Bitte um" in the Sidebar

Expected: New tab is activated
Actual: Sidebar content disappears

This works fine with the 'gen' plugin, but not with the 'gtk3' plugin.
Comment 1 V Stuart Foote 2022-10-13 18:59:03 UTC
Samuel,

If you give the window frame a nudge does the content appear? 

On Windows builds, I have seen big chunks of the UI not repainted and leaving the element frame empty.  A little move of the GUI repaints things fully.

Against Windows, I'd filed and then closed WMF bug 151153, but I still see it from time to time.
Comment 2 Samuel Mehrbrodt 2022-10-17 06:43:04 UTC
Content doesn't appear even when resizing the Sidebar.
Comment 3 Gabor Kelemen (Collabora) 2022-10-30 12:54:41 UTC
*** Bug 151804 has been marked as a duplicate of this bug. ***
Comment 4 Caolán McNamara 2022-11-03 20:36:33 UTC
oddly works with wayland backend but not x11
Comment 5 Caolán McNamara 2022-11-03 21:58:08 UTC
I think the embedded frame that contains the non-native widgets used to backwards compatible support these external sidebar things is updating its geometry to be relative to the screen and it maybe for this case it should be relative to its its container or something of that nature. (move the window to make the sidebar as far left and top on the screen and still be visible and on clicking it should shift downwards and rightwards small enough to still be partially visible). Under wayland because we can't know the position on screen this code path is mostly disabled.
Comment 6 Commit Notification 2022-11-04 11:35:26 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/63e1f94c121a5153c2b9012a7fbc2da3a493a8be

Related: tdf#151509 make what the x/y values are more clear

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2022-11-04 11:54:51 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b1671feb791178f9c498b0d00a5aad486bccfa03

Related: tdf#151509 trust the crossing position provided by gtk

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2022-11-04 15:55:14 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/20d5763b2b56b4e3d7569fe9e5cdad87657f6808

Related: tdf#151509 factor out common block as UpdateGeometryFromEvent

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2022-11-04 21:14:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d8856123f72d243b45fe52b7d3dbb87aa35ce0ba

Resolves: tdf#151509 don't overwrite geometry for system childs

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Caolán McNamara 2022-11-05 20:17:55 UTC
looks good to me in trunk, backport to 7-4 in gerrit
Comment 11 Commit Notification 2022-11-07 19:51:09 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/2d0e324eb9deaf113d63c9ff10d3d017befa665b

Resolves: tdf#151509 don't overwrite geometry for system childs

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.