Related: tdf#151509 make what the x/y values are more clear

we're re-deriving in a more complicated way values we already have
available.

no change of logic intended.

Change-Id: I14232558312e5457dce7a949cdafe0518214894d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142270
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>